[tool.poetry]
name = "auto-gpt"
version = "0.1.0"
description = "Auto-GPT"
authors = ["Your Name <you@example.com>"]
packages = [{include = "auto_gpt"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^1.0.0"
tiktoken = "^0.5.1"
numpy = "^1.23.0"
pydantic = "^2.0.0"
requests = "^2.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
